--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="PhishU - Targeted Spear-Phishing and Security Awareness Training Tools and Services" />
+        <meta name="description" content="PhishU - Targeted Spear Phishing and Security Awareness Training Tools and Services" />
         <meta name="author" content="PhishU, LLC" />
-        <title>PhishU</title>
+        <title>PhishU - Targeted Spear Phishing and Security Awareness Training Tools and Services</title>
         <link href="css/styles.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
