--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="PhishU - Targeted Spear Phishing and Security Awareness Training Tools and Services" />
+        <meta name="description" content="PhishU | Targeted Spear Phishing and Security Awareness Training Tools and Services" />
         <meta name="author" content="PhishU, LLC" />
-        <title>PhishU - Targeted Spear Phishing and Security Awareness Training Tools and Services</title>
+        <title>PhishU&emsp;|&emsp;Targeted Spear Phishing and Security Awareness Training Tools and Services</title>
         <link href="css/styles.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="icon" type="image/x-icon" href="favicon-32x32.png" />
@@ -20,14 +20,14 @@
                     <!-- Navbar-->
                     <nav class="navbar navbar-marketing navbar-expand-lg bg-transparent navbar-dark fixed-top">
                         <div class="container px-5">
-                            <a class="navbar-brand text-white" href="index.html">PhishU</a>
+                            <a class="navbar-brand text-white" href="index.html">PhishU | Cybersecurity Services, Tools and Training</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><i data-feather="menu"></i></button>
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav ms-auto me-lg-5">
-                                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                                    <!--<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>-->
                                     <li class="nav-item dropdown dropdown-xl no-caret">
                                         <a class="nav-link dropdown-toggle" id="navbarDropdownDemos" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            Landings
+                                            Services
                                             <i class="fas fa-chevron-right dropdown-arrow"></i>
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-end animated--fade-in-up me-lg-n25 me-xl-n15" aria-labelledby="navbarDropdownDemos">
@@ -80,7 +80,7 @@
                                     </li>
                                     <li class="nav-item dropdown dropdown-xl no-caret">
                                         <a class="nav-link dropdown-toggle" id="navbarDropdownPages" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            Pages
+                                            Products
                                             <i class="fas fa-chevron-right dropdown-arrow"></i>
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-end me-lg-n20 me-xl-n15 animated--fade-in-up" aria-labelledby="navbarDropdownPages">
@@ -132,7 +132,8 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li class="nav-item dropdown no-caret">
+									<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                                    <!--<li class="nav-item dropdown no-caret">
                                         <a class="nav-link dropdown-toggle" id="navbarDropdownDocs" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             Documentation
                                             <i class="fas fa-chevron-right dropdown-arrow"></i>
@@ -162,30 +163,32 @@
                                                 </div>
                                             </a>
                                         </div>
-                                    </li>
+                                    </li>-->
                                 </ul>
                                 <a class="btn fw-500 ms-lg-4 btn-teal" href="https://shop.startbootstrap.com/sb-ui-kit-pro">
-                                    Buy Now
+                                    Get Started!
                                     <i class="ms-2" data-feather="arrow-right"></i>
                                 </a>
                             </div>
                         </div>
                     </nav>
                     <!-- Page Header-->
-                    <header class="page-header-ui page-header-ui-dark bg-gradient-primary-to-secondary">
+                    <header class="page-header-ui page-header-ui-dark bg-gradient-primary-only">
                         <div class="page-header-ui-content pt-10">
                             <div class="container px-5">
                                 <div class="row gx-5 align-items-center">
-                                    <div class="col-lg-6" data-aos="fade-up">
-                                        <h1 class="page-header-ui-title">Build your next project faster with SB UI Kit Pro</h1>
-                                        <p class="page-header-ui-text mb-5">Welcome to SB UI Kit Pro, a toolkit for building beautiful web interfaces, created by the development team at Start Bootstrap</p>
-                                        <a class="btn btn-teal fw-500 me-2" href="#!">
+                                    
+									<div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-delay="100"><img class="img-fluid" src="images/logo-only-transparent-white.png" /><br><br><br><br><br></div>
+									<div class="col-lg-6" data-aos="fade-up">
+                                        <!--<h1 class="page-header-ui-title">Get Caught and Join the School</h1>-->
+                                        <p class="page-header-ui-text mb-7">GET CAUGHT<br>THEN JOIN THE<br>SCHOOL</p>
+                                        <!--<a class="btn btn-teal fw-500 me-2" href="#!">
                                             Get Started
                                             <i class="ms-2" data-feather="arrow-right"></i>
                                         </a>
-                                        <a class="btn btn-link fw-500" href="#!">Learn More</a>
+                                        <a class="btn btn-link fw-500" href="#!">Learn More</a>-->
                                     </div>
-                                    <div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-delay="100"><img class="img-fluid" src="assets/img/illustrations/windows.svg" /></div>
+                                    <!--<div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-delay="100"><img class="img-fluid" src="images/logo-transparent-white.png" /></div>-->
                                 </div>
                             </div>
                         </div>
@@ -199,18 +202,18 @@
                             <div class="row gx-5 text-center">
                                 <div class="col-lg-4 mb-5 mb-lg-0">
                                     <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-4"><i data-feather="layers"></i></div>
-                                    <h3>Built for developers</h3>
-                                    <p class="mb-0">Our customizable, block-based build system makes creating your next project fast and easy!</p>
+                                    <h3>Social Engineering Services</h3>
+                                    <p class="mb-0">We perform highly customized, targeted spear-phishing with analytics to test your defenses and track employee awareness progress. We also help identify weaknesses in Multi-Factor Authentication and anti-spam implementations.</p>
                                 </div>
                                 <div class="col-lg-4 mb-5 mb-lg-0">
                                     <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-4"><i data-feather="smartphone"></i></div>
-                                    <h3>Modern responsive design</h3>
-                                    <p class="mb-0">Featuring carefully crafted, mobile-first components, your end product will function beautifully on any device!</p>
+                                    <h3>Security Awareness Training</h3>
+                                    <p class="mb-0">After getting caught (or before!), take our awareness training to know what to look for next time and improve the security posture of the organization.</p>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-4"><i data-feather="code"></i></div>
-                                    <h3>Complete documentation</h3>
-                                    <p class="mb-0">All of the layouts, page sections, components, and utilities are fully covered in this products docs.</p>
+                                    <h3>Cybersecurity Tools</h3>
+                                    <p class="mb-0">Have your own internal security team? Purchase our tool to assist with internal phishing campains and awareness training.</p>
                                 </div>
                             </div>
                         </div>
