--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>PhishU&emsp;|&emsp;Targeted Spear Phishing and Security Awareness Training Tools and Services</title>
         <link href="css/styles.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-        <link rel="icon" type="image/x-icon" href="favicon-32x32.png" />
+        <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
         <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.24.1/feather.min.js" crossorigin="anonymous"></script>
     </head>
@@ -20,7 +20,7 @@
                     <!-- Navbar-->
                     <nav class="navbar navbar-marketing navbar-expand-lg bg-transparent navbar-dark fixed-top">
                         <div class="container px-5">
-                            <a class="navbar-brand text-white" href="index.html">PhishU | Cybersecurity Services, Tools and Training</a>
+                            <a class="navbar-brand text-white" href="index.html">PhishU</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><i data-feather="menu"></i></button>
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav ms-auto me-lg-5">
@@ -174,21 +174,21 @@
                     </nav>
                     <!-- Page Header-->
                     <header class="page-header-ui page-header-ui-dark bg-gradient-primary-only">
-                        <div class="page-header-ui-content pt-10">
+                        <div class="page-header-ui-content">
                             <div class="container px-5">
                                 <div class="row gx-5 align-items-center">
                                     
-									<div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-delay="100"><img class="img-fluid" src="images/logo-only-transparent-white.png" /><br><br><br><br><br></div>
-									<div class="col-lg-6" data-aos="fade-up">
-                                        <!--<h1 class="page-header-ui-title">Get Caught and Join the School</h1>-->
-                                        <p class="page-header-ui-text mb-7">GET CAUGHT<br>THEN JOIN THE<br>SCHOOL</p>
+									<div class="col-lg-7" data-aos="fade-up" data-aos-delay="100"><img class="img-fluid" src="images/logo-transparent-white-small.png" /></div>
+									<div class="col-lg-5" data-aos="fade-up">
+                                        <br><h1 class="page-header-ui-title">Targeted, Adversary Simulation-Level Spear-Phishing</h1>
+                                        <p class="page-header-ui-text mb-7">Already performing security awareness training or phishing services? Not a problem! We can compliment those by testing your training and Cybersecurity product effectiveness. This is as real-world as it gets! We bring black-box red teaming to social engineering.</p>
                                         <!--<a class="btn btn-teal fw-500 me-2" href="#!">
                                             Get Started
                                             <i class="ms-2" data-feather="arrow-right"></i>
                                         </a>
                                         <a class="btn btn-link fw-500" href="#!">Learn More</a>-->
                                     </div>
-                                    <!--<div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-delay="100"><img class="img-fluid" src="images/logo-transparent-white.png" /></div>-->
+                                    <!--<div class="col-lg-7 d-none d-lg-block" data-aos="fade-up" data-aos-delay="100"><img class="img-fluid" src="images/logo-transparent-white-small.png" /></div>-->
                                 </div>
                             </div>
                         </div>
@@ -201,17 +201,17 @@
                         <div class="container px-5">
                             <div class="row gx-5 text-center">
                                 <div class="col-lg-4 mb-5 mb-lg-0">
-                                    <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-4"><i data-feather="layers"></i></div>
+                                    <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-4"><i class="fa fa-fish"></i></div>
                                     <h3>Social Engineering Services</h3>
                                     <p class="mb-0">We perform highly customized, targeted spear-phishing with analytics to test your defenses and track employee awareness progress. We also help identify weaknesses in Multi-Factor Authentication and anti-spam implementations.</p>
                                 </div>
                                 <div class="col-lg-4 mb-5 mb-lg-0">
-                                    <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-4"><i data-feather="smartphone"></i></div>
+                                    <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-4"><i class="fa fa-graduation-cap"></i></div>
                                     <h3>Security Awareness Training</h3>
                                     <p class="mb-0">After getting caught (or before!), take our awareness training to know what to look for next time and improve the security posture of the organization.</p>
                                 </div>
                                 <div class="col-lg-4">
-                                    <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-4"><i data-feather="code"></i></div>
+                                    <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-4"><i class="fa fa-wrench"></i></div>
                                     <h3>Cybersecurity Tools</h3>
                                     <p class="mb-0">Have your own internal security team? Purchase our tool to assist with internal phishing campains and awareness training.</p>
                                 </div>
@@ -274,7 +274,7 @@
                         </div>
                     </section>
                     <hr class="m-0" />
-                    <section class="bg-light pt-10">
+                    <!--<section class="bg-light pt-10">
                         <div class="container px-5">
                             <div class="text-center mb-5">
                                 <h2>Pricing Table</h2>
@@ -382,10 +382,10 @@
                             </div>
                         </div>
                         <div class="svg-border-rounded text-dark">
-                            <!-- Rounded SVG Border-->
+                            
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none" fill="currentColor"><path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path></svg>
                         </div>
-                    </section>
+                    </section>-->
                     <section class="bg-dark py-10">
                         <div class="container px-5">
                             <div class="row gx-5 my-10">
