--- a/index.html
+++ b/index.html
@@ -201,17 +201,17 @@
                         <div class="container px-5">
                             <div class="row gx-5 text-center">
                                 <div class="col-lg-4 mb-5 mb-lg-0">
-                                    <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-4"><i class="fa fa-fish"></i></div>
+                                    <div class="icon-stack icon-stack-xl bg-teal text-white mb-4"><i class="fa fa-fish"></i></div>
                                     <h3>Social Engineering Services</h3>
                                     <p class="mb-0">We perform highly customized, targeted spear-phishing with analytics to test your defenses and track employee awareness progress. We also help identify weaknesses in Multi-Factor Authentication and anti-spam implementations.</p>
                                 </div>
                                 <div class="col-lg-4 mb-5 mb-lg-0">
-                                    <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-4"><i class="fa fa-graduation-cap"></i></div>
+                                    <div class="icon-stack icon-stack-xl bg-teal text-white mb-4"><i class="fa fa-graduation-cap"></i></div>
                                     <h3>Security Awareness Training</h3>
                                     <p class="mb-0">After getting caught (or before!), take our awareness training to know what to look for next time and improve the security posture of the organization.</p>
                                 </div>
                                 <div class="col-lg-4">
-                                    <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-4"><i class="fa fa-wrench"></i></div>
+                                    <div class="icon-stack icon-stack-xl bg-teal text-white mb-4"><i class="fa fa-wrench"></i></div>
                                     <h3>Cybersecurity Tools</h3>
                                     <p class="mb-0">Have your own internal security team? Purchase our tool to assist with internal phishing campains and awareness training.</p>
                                 </div>
