--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <!-- Navbar-->
                     <nav class="navbar navbar-marketing navbar-expand-lg bg-transparent navbar-dark fixed-top">
                         <div class="container px-5">
-                            <a class="navbar-brand text-white" href="index.html">PhishU | Spear-Phishing and Training</a>
+                            <a class="navbar-brand text-white" href="index.html">PhishU | Spear-Phishing & Training</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><i data-feather="menu"></i></button>
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav ms-auto me-lg-5">
@@ -176,9 +176,9 @@
                     <header class="page-header-ui page-header-ui-dark bg-gradient-primary-only">
                         <div class="page-header-ui-content">
                             <div class="container px-5">
-                                <div class="row gx-5 align-items-center">
+                                <div class="row gx-10 align-items-center">
                                     
-									<div class="col-lg-7" data-aos="fade-up" data-aos-delay="100"><img class="img-fluid" src="images/logo-transparent-white-grey-small.png" /></div>
+									<div class="col-lg-7" data-aos="fade-up" data-aos-delay="100"><img class="img-fluid" src="images/logo-transparent-white-grey-small.png" /><br></div>
 									<div class="col-lg-5" data-aos="fade-up">
                                         <br><h6 class="page-header-ui-title">Targeted, Adversary Simulation-Level Spear-Phishing</h6>
                                         <p class="page-header-ui-text mb-7">Already performing security awareness training or phishing services? Not a problem! We can compliment those by testing your training and Cybersecurity product effectiveness. This is as real-world as it gets! We bring black-box red teaming to social engineering.</p>
