--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         <div class="container px-5">
                             <div class="row gx-5 align-items-center justify-content-center">
                                 <div class="col-md-9 col-lg-6 order-1 order-lg-0" data-aos="fade-right">
-                                    <div class="content-skewed content-skewed-right"><img class="content-skewed-item img-fluid shadow-lg rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-portfolio.png" alt="..." /></div>
+                                    <div class="content-skewed content-skewed-right"><img class="content-skewed-item img-fluid shadow-lg rounded-3" src="images/phishapi.png" alt="..." /></div>
                                 </div>
                                 <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
                                     <div class="mb-5">
@@ -393,8 +393,8 @@
                                     <div class="d-flex h-100">
                                         <div class="icon-stack flex-shrink-0 bg-teal text-white"><i class="fas fa-question"></i></div>
                                         <div class="ms-4">
-                                            <h5 class="text-white">What is SB UI Kit Pro?</h5>
-                                            <p class="text-white-50">SB UI Kit Pro is a fully coded, responsive, Bootstrap based UI toolkit for developers.</p>
+                                            <h5 class="text-white">What if we already use KnowBe4 and have ProofPoint, Mimecast, etc?</h5>
+                                            <p class="text-white-50">It's no problem! We compliment these other services by testing the effectiveness of existing training and security solutions. We also leverage our own bleeding-edge techniques that often bypass and identify gaps in awareness training and the most advanced technical solutions.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -402,8 +402,8 @@
                                     <div class="d-flex h-100">
                                         <div class="icon-stack flex-shrink-0 bg-teal text-white"><i class="fas fa-question"></i></div>
                                         <div class="ms-4">
-                                            <h5 class="text-white">What can I build with SB UI Kit Pro?</h5>
-                                            <p class="text-white-50">Build anything you want to using this UI kit! It is flexible, multipurpose, and full of tools for you to use during development.</p>
+                                            <h5 class="text-white">Is this necessary if we use Multi-Factor Authentication?</h5>
+                                            <p class="text-white-50">Absolutely! One of the big things we do for our customers is identify common MFA implementation vulnerabilities and offer guidance on how to harden authentication.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -411,8 +411,8 @@
                                     <div class="d-flex h-100">
                                         <div class="icon-stack flex-shrink-0 bg-teal text-white"><i class="fas fa-question"></i></div>
                                         <div class="ms-4">
-                                            <h5 class="text-white">Do I get free updates?</h5>
-                                            <p class="text-white-50">All of Start Bootstrap's premium products will come with updates for feature additions, bugfixes, and other small updates.</p>
+                                            <h5 class="text-white">How is PhishU different than other Cybsersecurity consulting firms?</h5>
+                                            <p class="text-white-50">Most security firms offering services either don't offer phishing, don't do it well due to roadblocks with spam prevention and cloud technologies today, or resell generic phishing tools which aren't as effective. This is our specialty and we purposely don't offer those other services so we can stay focused on what we do best!</p>
                                         </div>
                                     </div>
                                 </div>
@@ -420,8 +420,8 @@
                                     <div class="d-flex h-100">
                                         <div class="icon-stack flex-shrink-0 bg-teal text-white"><i class="fas fa-question"></i></div>
                                         <div class="ms-4">
-                                            <h5 class="text-white">What frameworks does it integrate with?</h5>
-                                            <p class="text-white-50">Our HTML based pro products are build with framework integration in mind. The compiled code is HTML and CSS, which is able to integrate with any framework.</p>
+                                            <h5 class="text-white">Do you offer reporting or adversary simulation?</h5>
+                                            <p class="text-white-50">We bake analytics in for email opens, link clicks, visited landing pages, captured credentials, and every other statistic you can think of to help bring awareness to specific techniques and targeted training efforts. This is provided in a real-time dashboard so our customers can view results as they come in! We can also absolutely (and optionally!) use captured credentials to demonstrate the impact an attacker can have with remote administrative access, etc.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -429,9 +429,9 @@
                             <div class="row gx-5 justify-content-center text-center">
                                 <div class="col-lg-8">
                                     <div class="badge bg-transparent-light rounded-pill badge-marketing mb-4">Get Started</div>
-                                    <h2 class="text-white">Save time with SB UI Kit Pro</h2>
-                                    <p class="lead text-white-50 mb-5">Start Bootstrap's premium UI Kit beautifully and intuitively extends the Bootstrap framework making it easy to build your next project!</p>
-                                    <a class="btn btn-teal fw-500" href="#!">Buy Now!</a>
+                                    <h2 class="text-white">Who's this for?</h2>
+                                    <p class="lead text-white-50 mb-5">We help customers from all security maturity models! Whether you're just getting started and want to know what your weaknesses are, or you're Fort Knox and want a red team, real-world engagement to see how you would hold up to a dedicated, targeted attack, PhishU is for you!</p>
+                                    <a class="btn btn-teal fw-500" href="#!">Request a Quote!</a>
                                 </div>
                             </div>
                         </div>
@@ -456,9 +456,9 @@
                                                 <path d="M2187.5,275.24c50.34-47,127.94-62.92,192.53-38.17,61.25,23.07,100.26,81.37,120,141.36-91,37.75-181.63,75.08-272.65,112.83,12.58,23.91,31.88,45.72,57.88,54.53,36.5,13,80.12,8.39,110.74-15.94,12.17-9.22,21.82-21.39,31-33.13,23.07,15.52,46.14,30.62,69.21,46.14-32.71,49.07-87.66,83.47-146.81,88.92-65.43,8-135.06-17.19-177.43-68.37-69.63-80.54-62.92-215.6,15.52-288.17m44.88,77.6c-14.26,20.55-20.13,45.72-19.71,70.47q91.23-37.76,182.46-75.92c-10.06-23.49-34.39-37.75-59.14-41.53C2296.14,298.73,2254.61,320.12,2232.38,352.84Z" transform="translate(0.01 -0.07)" />
                                             </svg>
                                         </div>
-                                        <p class="testimonial-quote text-primary">"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut error vel omnis adipisci. Ad nam officiis sapiente dicta incidunt harum."</p>
-                                        <div class="testimonial-name">Adam Hall</div>
-                                        <div class="testimonial-position">Head of Engineering</div>
+                                        <p class="testimonial-quote text-primary">"We're hooked!"</p>
+                                        <div class="testimonial-name">No One</div>
+                                        <div class="testimonial-position">Ever</div>
                                     </div>
                                 </div>
                                 <div class="col-lg-6" data-aos="fade" data-aos-delay="100">
