--- a/index.html
+++ b/index.html
@@ -230,21 +230,21 @@
                                 </div>
                                 <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
                                     <div class="mb-5">
-                                        <h2>Here's What You Get</h2>
-                                        <p class="lead">When you purchase this UI Kit, you get access to a robust suite of powerful tools and components to help you build your next landing page quickly and easily.</p>
+                                        <h2>What we offer</h2>
+                                        <p class="lead">We offer highly customized campaigns catered to your environment and personnel. Some campaigns we've performed include spoofed Zoom desktop applications, SSO portals (Okta, Microsoft Online, Google, etc), remote administrative portals (Citrix, VDIs, VPNs), and many others!</p>
                                     </div>
                                     <div class="row gx-5">
                                         <div class="col-md-6 mb-4">
-                                            <h6>Landing Pages</h6>
-                                            <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
+                                            <h6>Email Campaigns</h6>
+                                            <p class="mb-2 small">Target privileged users and craft campaigns with unique emails to every employee! We created dynamic templates and imported spreadsheets to be able to make each email unique and appear to be from that person's supervisor, if desired. No blanket company-wide emails!</p>
                                             <a class="small text-arrow-icon" href="#!">
                                                 Learn More
                                                 <i data-feather="arrow-right"></i>
                                             </a>
                                         </div>
                                         <div class="col-md-6 mb-4">
-                                            <h6>Page Examples</h6>
-                                            <p class="mb-2 small mb-0">Use our pre-built page examples to quickly create inner pages to your website.</p>
+                                            <h6>Receive Catered Training!</h6>
+                                            <p class="mb-2 small mb-0">We believe in continuous improvement and security awareness! Take our catered "University" training after a campaign to identify common "gotchas" based on real results! The training can optionally be required and confidential because we don't believe in shaming users but want to improve awareness for all!</p>
                                             <a class="small text-arrow-icon" href="#!">
                                                 Learn More
                                                 <i data-feather="arrow-right"></i>
@@ -421,7 +421,7 @@
                                         <div class="icon-stack flex-shrink-0 bg-teal text-white"><i class="fas fa-question"></i></div>
                                         <div class="ms-4">
                                             <h5 class="text-white">Do you offer reporting or adversary simulation?</h5>
-                                            <p class="text-white-50">We bake analytics in for email opens, link clicks, visited landing pages, captured credentials, and every other statistic you can think of to help bring awareness to specific techniques and targeted training efforts. This is provided in a real-time dashboard so our customers can view results as they come in! We can also absolutely (and optionally!) use captured credentials to demonstrate the impact an attacker can have with remote administrative access, etc.</p>
+                                            <p class="text-white-50">We bake analytics in for email opens, link clicks, visited landing pages, captured credentials, and every other statistic you can think of to help bring awareness to specific techniques and targeted training efforts. This is provided in a real-time dashboard so our customers can view results as they come in! We can also absolutely (and optionally!) use captured credentials to demonstrate the impact an attacker can have with remote administrative access and lateral internal phishing</p>
                                         </div>
                                     </div>
                                 </div>
