--- a/index.html
+++ b/index.html
@@ -253,16 +253,16 @@
                                     </div>
                                     <div class="row gx-5">
                                         <div class="col-md-6 mb-4">
-                                            <h6>Layouts</h6>
-                                            <p class="mb-2 small mb-0">Our flex box based layout options make your site beautifully responsive and adaptable to any device.</p>
+                                            <h6>Tools</h6>
+                                            <p class="mb-2 small mb-0">Already have internal security resources? That's great! Work with one of our experts to perform a white-box campaign or, do it completely by yourself by using our phishing tool and training resources!</p>
                                             <a class="small text-arrow-icon" href="#!">
                                                 Learn More
                                                 <i data-feather="arrow-right"></i>
                                             </a>
                                         </div>
                                         <div class="col-md-6 mb-4">
-                                            <h6>Modular Sections</h6>
-                                            <p class="small mb-0">All of the sections on each page are modular, so you can drop them into an existing page, or start with a new one!</p>
+                                            <h6>Analytics</h6>
+                                            <p class="small mb-0">We track detailed analytics for all components of our campaigns so you have real-time visibility into results of the engagements while they happen! We can also integrate into existing enterprise chat applications to monitor results as they come in using tools such as Slack, Discord, and Teams!</p>
                                             <a class="small text-arrow-icon" href="#!">
                                                 Learn More
                                                 <i data-feather="arrow-right"></i>
