--- a/index.html
+++ b/index.html
@@ -237,17 +237,17 @@
                                         <div class="col-md-6 mb-4">
                                             <h6>Email Campaigns</h6>
                                             <p class="mb-2 small">Target privileged users and craft campaigns with unique emails to every employee! We created dynamic templates and imported spreadsheets to be able to make each email unique and appear to be from that person's supervisor, if desired. No blanket company-wide emails!</p>
-                                            <a class="small text-arrow-icon" href="#!">
+                                            <!--<a class="small text-arrow-icon" href="#!">
                                                 Learn More
                                                 <i data-feather="arrow-right"></i>
-                                            </a>
+                                            </a>-->
                                         </div>
                                         <div class="col-md-6 mb-4">
                                             <h6>Receive Catered Training!</h6>
                                             <p class="mb-2 small mb-0">We believe in continuous improvement and security awareness! Take our catered "University" training after a campaign to identify common "gotchas" based on real results! The training can optionally be required and confidential because we don't believe in shaming users but want to improve awareness for all!</p>
-                                            <a class="small text-arrow-icon" href="#!">
+                                            <!--<a class="small text-arrow-icon" href="#!">
                                                 Learn More
-                                                <i data-feather="arrow-right"></i>
+                                                <i data-feather="arrow-right"></i>-->
                                             </a>
                                         </div>
                                     </div>
@@ -255,18 +255,18 @@
                                         <div class="col-md-6 mb-4">
                                             <h6>Tools</h6>
                                             <p class="mb-2 small mb-0">Already have internal security resources? That's great! Work with one of our experts to perform a white-box campaign or, do it completely by yourself by using our phishing tool and training resources!</p>
-                                            <a class="small text-arrow-icon" href="#!">
+                                            <!--<a class="small text-arrow-icon" href="#!">
                                                 Learn More
                                                 <i data-feather="arrow-right"></i>
-                                            </a>
+                                            </a>-->
                                         </div>
                                         <div class="col-md-6 mb-4">
                                             <h6>Analytics</h6>
                                             <p class="small mb-0">We track detailed analytics for all components of our campaigns so you have real-time visibility into results of the engagements while they happen! We can also integrate into existing enterprise chat applications to monitor results as they come in using tools such as Slack, Discord, and Teams!</p>
-                                            <a class="small text-arrow-icon" href="#!">
+                                            <!--<a class="small text-arrow-icon" href="#!">
                                                 Learn More
                                                 <i data-feather="arrow-right"></i>
-                                            </a>
+                                            </a>-->
                                         </div>
                                     </div>
                                 </div>
