--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                             </div>
                             <div class="row gx-5 justify-content-center text-center">
                                 <div class="col-lg-8">
-                                    <div class="badge bg-transparent-light rounded-pill badge-marketing mb-4">Get Started</div>
+                                    <!--<div class="badge bg-transparent-light rounded-pill badge-marketing mb-4">Get Started</div>-->
                                     <h2 class="text-white">Who's this for?</h2>
                                     <p class="lead text-white-50 mb-5">We help customers from all security maturity models! Whether you're just getting started and want to know what your weaknesses are, or you're Fort Knox and want a red team, real-world engagement to see how you would hold up to a dedicated, targeted attack, PhishU is for you!</p>
                                     <a class="btn btn-teal fw-500" href="#!">Request a Quote!</a>
@@ -440,7 +440,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none" fill="currentColor"><path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path></svg>
                         </div>
                     </section>
-                    <section class="bg-white pt-10">
+                    <!--<section class="bg-white pt-10">
                         <div class="container px-5">
                             <div class="row gx-5 mb-10">
                                 <div class="col-lg-6 mb-5 mb-lg-0 divider-right" data-aos="fade">
@@ -508,11 +508,11 @@
                             </div>
                         </div>
                         <div class="svg-border-rounded text-light">
-                            <!-- Rounded SVG Border-->
+                            
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none" fill="currentColor"><path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path></svg>
                         </div>
-                    </section>
-                    <section class="bg-light py-10">
+                    </section>-->
+                    <!--<section class="bg-light py-10">
                         <div class="container px-5 mt-5">
                             <div class="row gx-5 align-items-center">
                                 <div class="col-lg-6">
@@ -525,7 +525,7 @@
                                 </div>
                             </div>
                         </div>
-                    </section>
+                    </section>-->
                     <hr class="m-0" />
                 </main>
             </div>
@@ -534,10 +534,10 @@
                     <div class="container px-5">
                         <div class="row gx-5">
                             <div class="col-lg-3">
-                                <div class="footer-brand">SB UI Kit Pro</div>
-                                <div class="mb-3">Design made easy</div>
+                                <div class="footer-brand">PhishU</div>
+                                <div class="mb-3">Get Caught Then Join the School</div>
                                 <div class="icon-list-social mb-5">
-                                    <a class="icon-list-social-link" href="#!"><i class="fab fa-instagram"></i></a>
+                                    <!--<a class="icon-list-social-link" href="#!"><i class="fab fa-instagram"></i></a>-->
                                     <a class="icon-list-social-link" href="#!"><i class="fab fa-facebook"></i></a>
                                     <a class="icon-list-social-link" href="#!"><i class="fab fa-github"></i></a>
                                     <a class="icon-list-social-link" href="#!"><i class="fab fa-twitter"></i></a>
@@ -546,42 +546,42 @@
                             <div class="col-lg-9">
                                 <div class="row gx-5">
                                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Product</div>
+                                        <div class="text-uppercase-expanded text-xs mb-4">Services</div>
                                         <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Landing</a></li>
-                                            <li class="mb-2"><a href="#!">Pages</a></li>
-                                            <li class="mb-2"><a href="#!">Sections</a></li>
-                                            <li class="mb-2"><a href="#!">Documentation</a></li>
-                                            <li><a href="#!">Changelog</a></li>
+                                            <li class="mb-2"><a href="#!">Spear-Phishing</a></li>
+                                            <li class="mb-2"><a href="#!">Awareness Training</a></li>
+                                            <li class="mb-2"><a href="#!">MFA Gap Analysis</a></li>
+                                            <!--<li class="mb-2"><a href="#!">Documentation</a></li>
+                                            <li><a href="#!">Changelog</a></li>-->
                                         </ul>
                                     </div>
                                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Technical</div>
+                                        <div class="text-uppercase-expanded text-xs mb-4">Products</div>
                                         <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Documentation</a></li>
-                                            <li class="mb-2"><a href="#!">Changelog</a></li>
+                                            <li class="mb-2"><a href="#!">PhishU Phishing Framework</a></li>
+                                            <!--<li class="mb-2"><a href="#!">Changelog</a></li>
                                             <li class="mb-2"><a href="#!">Theme Customizer</a></li>
-                                            <li><a href="#!">UI Kit</a></li>
+                                            <li><a href="#!">UI Kit</a></li>-->
                                         </ul>
                                     </div>
                                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Includes</div>
+                                        <div class="text-uppercase-expanded text-xs mb-4">More</div>
                                         <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Utilities</a></li>
-                                            <li class="mb-2"><a href="#!">Components</a></li>
-                                            <li class="mb-2"><a href="#!">Layouts</a></li>
+                                            <li class="mb-2"><a href="#!">Blog</a></li>
+                                            <li class="mb-2"><a href="#!">About Us</a></li>
+                                            <!--<li class="mb-2"><a href="#!">Contact Us</a></li>
                                             <li class="mb-2"><a href="#!">Code Samples</a></li>
                                             <li class="mb-2"><a href="#!">Products</a></li>
                                             <li class="mb-2"><a href="#!">Affiliates</a></li>
-                                            <li><a href="#!">Updates</a></li>
+                                            <li><a href="#!">Updates</a></li>-->
                                         </ul>
                                     </div>
                                     <div class="col-lg-3 col-md-6">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Legal</div>
+                                        <div class="text-uppercase-expanded text-xs mb-4">Contact Us</div>
                                         <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Privacy Policy</a></li>
-                                            <li class="mb-2"><a href="#!">Terms and Conditions</a></li>
-                                            <li><a href="#!">License</a></li>
+                                            <li class="mb-2"><a href="#!">Email</a></li>
+                                            <li class="mb-2"><a href="#!">Slack Channel</a></li>
+                                            <li><a href="#!">Twitter</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -589,7 +589,7 @@
                         </div>
                         <hr class="my-5" />
                         <div class="row gx-5 align-items-center">
-                            <div class="col-md-6 small">Copyright &copy; Your Website 2021</div>
+                            <div class="col-md-6 small">Copyright &copy; PhishU 2022</div>
                             <div class="col-md-6 text-md-end small">
                                 <a href="#!">Privacy Policy</a>
                                 &middot;
