--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                                 </div>
                                 <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
                                     <div class="mb-5">
-                                        <h2>What we offer</h2>
+                                        <h2>What sets us apart</h2>
                                         <p class="lead">We offer highly customized campaigns catered to your environment and personnel. Some campaigns we've performed include spoofed Zoom desktop applications, SSO portals (Okta, Microsoft Online, Google, etc), remote administrative portals (Citrix, VDIs, VPNs), and many others!</p>
                                     </div>
                                     <div class="row gx-5">
@@ -386,7 +386,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none" fill="currentColor"><path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path></svg>
                         </div>
                     </section>-->
-                    <section class="bg-dark py-10">
+                    <section class="bg-dark py-3">
                         <div class="container px-5">
                             <div class="row gx-5 my-10">
                                 <div class="col-lg-6 mb-5">
